--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -9,8 +9,16 @@
      min-height: 100vh;
      background-size: cover;
      background-position: center;
+
+     width: 100vw;
+     min-height: calc(100vh - 64px );
  }
  
  .text-decorator-none{
      text-decoration: none;
  }
+
+.fundo{
+    height: 500px;
+}
+
