--- a/src/paginas/cadastroUsuario/CadastroUsuario.css
+++ b/src/paginas/cadastroUsuario/CadastroUsuario.css
@@ -1,5 +1,6 @@
 .imagem2{
-    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
+    /*background-image: url(https://i.imgur.com/d5bMdDJ.jpg);*/
+    background-image: url(  https://www.achetudoeregiao.com.br/noticias/gifs/superlua.jpg);
     background-repeat: no-repeat;
     width: 100vh;
     min-height: 100vh;
