--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,20 +1,22 @@
 .caixa{
-    background-color: #3f5185 ;
+    background-color: #3F51B5;
 }
 
 .titulo{
-    color: white !important; 
-    font-weight: "bold" !important;
+   color: white !important;
+   font-weight: bold !important;
 }
 
 .botao{
     border-color: white !important;
-    background-color: #3f51b5; 
+    background-color: #3F51B5;
     color: white !important;
 }
 
 .postagens{
-    background-color: white; 
+    background-color: white;
 }
 
-
+.text-decorator-none{
+    text-decoration: none;
+}
