--- a/src/components/postagens/listapostagem/ListaPostagem.css
+++ b/src/components/postagens/listapostagem/ListaPostagem.css
@@ -1,3 +1,9 @@
 .text-decorator-none{
     text-decoration: none;
 }
+
+.ca2{
+    /*background: linear-gradient(36deg, rgb(190, 190, 210) 8%, rgb(35, 141, 190) 80%);*/
+
+    background: linear-gradient(36deg, rgb(0, 255, 255) 8%, rgb(0, 51, 255) 80%);
+}
