estilizando as paginas

--- a/src/components/estaticos/footer/Footer.css
+++ b/src/components/estaticos/footer/Footer.css
@@ -1,10 +1,10 @@
 .box1{
-    background-color: #3F51B5;
+    background-color: #2f46d9;
     height: 120px;
 }
 
 .box2{
-    background-color: #303F9F;
+    background-color: #2f46d9;
     height: 60px;
 }
 
