--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -8,7 +8,7 @@
 
 .back{
    /* background: linear-gradient(36deg, blue 8%,  #FF8C00 80%);*/
-   background-color: #4682B4 !important ;
+   background-color: #2f46d9 !important ;
     height: 100px;
 }
 
