--- a/src/components/postagens/tabpostagem/TabPostagem.css
+++ b/src/components/postagens/tabpostagem/TabPostagem.css
@@ -1,3 +1,16 @@
 .titulo{
-    font-weight: bold;
+    font-weight: bold !important;
+    
  }
+
+ .back2{
+    background-color:  #2f46d9 !important ;
+    color: rgb(255, 255, 255) !important;
+    font-size: 18px !important;
+ }
+
+ .botao5:hover{
+    color: aqua;
+ }
+
+ 
