atualizando postagem para receber nome do usuario

--- a/src/components/postagens/listapostagem/ListaPostagem.css
+++ b/src/components/postagens/listapostagem/ListaPostagem.css
@@ -7,3 +7,8 @@
 
     background: linear-gradient(36deg, rgb(234, 231, 231) 8%, rgb(143, 143, 146) 80%);
 }
+
+.auto{
+    color: rgb(185, 69, 40);
+}
+
